--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "i": "^0.3.6",
     "jquery": "^3.3.1",
     "npm": "^6.1.0",
-    "vue": "^2.4.2"
+    "vue": "^2.4.2",
+    "vue-awesome": "^2.3.7"
   },
   "devDependencies": {
     "css-loader": "^0.28.11",
